--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       run: go get -v -t -d ./...
 
     - name: Build
-      run: go build -o mal-go -v ./src/
+      run: go build -v -o mal-go
 
     - name: Test
       run: bash ./ci_test.sh
